--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youtube-po-token-generator",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "author": "Yunzhe <yunzhe@zju.edu.cn>",
   "description": "It generates a valid poToken with visitorData fetched from YouTube.",
   "keywords": [
@@ -16,7 +16,14 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "global-agent": "^3.0.0",
     "jsdom": "^24.1.3"
+  },
+  "scripts": {
+    "prepublishOnly": "npx synp --source-file yarn.lock -f"
+  },
+  "bin": {
+    "youtube-po-token-generator": "./bin/cli.mjs"
   },
   "engines": {
     "node": ">=18.0"
