--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "global-agent": "^3.0.0",
-    "jsdom": "^24.1.3"
+    "jsdom": "^26.0.0"
   },
   "scripts": {
     "prepublishOnly": "npx synp --source-file yarn.lock -f && npm shrinkwrap && git checkout yarn.lock"
@@ -32,6 +32,7 @@
     "vendor/",
     "lib/",
     "index.js",
-    "index.d.ts"
+    "index.d.ts",
+    "npm-shrinkwrap.json"
   ]
 }
